refactor(controllers): integrate ModelMapper and OpenAPI documentation across all controllers
- Replaced manual entity conversion and toEntity() methods with ModelMapper for cleaner DTO ↔ Entity mapping.
- Added ModelMapper-based mapping for request and response DTOs.
  - Standardized responses using ApiResponseDTO for consistency.
  - Enhanced API documentation with OpenAPI annotations (@Operation, @ApiResponse).
  - Simplified controller logic to focus on business rules (e.g., role assignment, order details).
- Improved maintainability and scalability by centralizing mapping logic.

This refactor reduces boilerplate code, ensures consistent API responses,
and prepares the project for easier future extensions.